[gd_scene load_steps=15 format=2]

[ext_resource path="res://input_menu/input_menu.gd" type="Script" id=1]
[ext_resource path="res://input_menu/add_action.gd" type="Script" id=2]
[ext_resource path="res://input_menu/apply_revert.gd" type="Script" id=3]
[ext_resource path="res://input_menu/action_list.gd" type="Script" id=4]
[ext_resource path="res://input_menu/edit_input.gd" type="Script" id=5]
[ext_resource path="res://input_menu/KeyboardPhysical.svg" type="Texture" id=6]
[ext_resource path="res://input_menu/icon_joy_axis.svg" type="Texture" id=7]
[ext_resource path="res://input_menu/icon_joy_button.svg" type="Texture" id=8]
[ext_resource path="res://input_menu/icon_mouse.svg" type="Texture" id=9]
[ext_resource path="res://input_menu/key_input.gd" type="Script" id=10]
[ext_resource path="res://input_menu/joy_button.gd" type="Script" id=11]
[ext_resource path="res://input_menu/mouse_button.gd" type="Script" id=12]
[ext_resource path="res://input_menu/joy_axis.gd" type="Script" id=13]
[ext_resource path="res://input_menu/Keyboard.svg" type="Texture" id=14]

[node name="InputMenu" type="WindowDialog"]
margin_right = 633.0
margin_bottom = 417.0
popup_exclusive = true
window_title = "Input Map"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 625.0
margin_bottom = 409.0

[node name="AddAction" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 617.0
margin_bottom = 24.0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Label" parent="MarginContainer/VBoxContainer/AddAction"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Action:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/AddAction"]
margin_left = 49.0
margin_right = 572.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="WarningLabel" type="Label" parent="MarginContainer/VBoxContainer/AddAction"]
margin_left = 576.0
margin_top = 5.0
margin_right = 576.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="MarginContainer/VBoxContainer/AddAction"]
margin_left = 580.0
margin_right = 617.0
margin_bottom = 24.0
text = "Add"

[node name="ActionList" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 617.0
margin_bottom = 377.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ActionList"]
margin_left = 7.0
margin_top = 7.0
margin_right = 610.0
margin_bottom = 342.0

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer/ActionList/MarginContainer"]
margin_right = 603.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyRevert" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 381.0
margin_right = 617.0
margin_bottom = 401.0
size_flags_vertical = 0
script = ExtResource( 3 )

[node name="Apply" type="Button" parent="MarginContainer/VBoxContainer/ApplyRevert"]
margin_right = 48.0
margin_bottom = 20.0
text = "Apply"

[node name="Revert" type="Button" parent="MarginContainer/VBoxContainer/ApplyRevert"]
margin_left = 52.0
margin_right = 105.0
margin_bottom = 20.0
text = "Revert"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/ApplyRevert"]
margin_left = 109.0
margin_right = 163.0
margin_bottom = 20.0
text = "Cancel"

[node name="InputSelector" type="WindowDialog" parent="."]
process_priority = -10000
visible = true
margin_right = 308.0
margin_bottom = 123.0
window_title = "Edit Input"
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="InputSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="InputSelector/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 300.0
margin_bottom = 234.0

[node name="KeyInput" type="Label" parent="InputSelector/MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_vertical = 3
text = "Press a key..."
align = 1
valign = 1
script = ExtResource( 10 )

[node name="JoyButton" type="HBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 292.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 11 )

[node name="Left" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton"]
margin_left = 55.0
margin_right = 103.0
margin_bottom = 38.0
alignment = 1

[node name="Device" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton/Left"]
margin_right = 48.0
margin_bottom = 14.0
text = "Device:"

[node name="Devices" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton/Left"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 38.0

[node name="Right" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton"]
margin_left = 107.0
margin_right = 237.0
margin_bottom = 38.0
alignment = 1

[node name="buttons" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton/Right"]
margin_right = 130.0
margin_bottom = 14.0
text = "Joypad button index:"

[node name="Buttons" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/JoyButton/Right"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 38.0

[node name="JoyAxis" type="HBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 292.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 13 )

[node name="Left" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis"]
margin_left = 63.0
margin_right = 111.0
margin_bottom = 38.0
alignment = 1

[node name="Device" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Left"]
margin_right = 48.0
margin_bottom = 14.0
text = "Device:"

[node name="Devices" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Left"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 38.0

[node name="Right" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis"]
margin_left = 115.0
margin_right = 228.0
margin_bottom = 38.0
alignment = 1

[node name="buttons" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Right"]
margin_right = 113.0
margin_bottom = 14.0
text = "Joypad axis index:"

[node name="Buttons" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Right"]
margin_top = 18.0
margin_right = 113.0
margin_bottom = 38.0

[node name="MouseButton" type="HBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 292.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 12 )

[node name="Left" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton"]
margin_left = 54.0
margin_right = 102.0
margin_bottom = 38.0
alignment = 1

[node name="Device" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton/Left"]
margin_right = 48.0
margin_bottom = 14.0
text = "Device:"

[node name="Devices" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton/Left"]
margin_top = 18.0
margin_right = 48.0
margin_bottom = 38.0

[node name="Right" type="VBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton"]
margin_left = 106.0
margin_right = 238.0
margin_bottom = 38.0
alignment = 1

[node name="buttons" type="Label" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton/Right"]
margin_right = 132.0
margin_bottom = 14.0
text = "Mouse button index:"

[node name="Buttons" type="OptionButton" parent="InputSelector/MarginContainer/VBoxContainer/MouseButton/Right"]
margin_top = 18.0
margin_right = 132.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="InputSelector/MarginContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 292.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 63
alignment = 1

[node name="Ok" type="Button" parent="InputSelector/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 102.0
margin_bottom = 32.0
text = "Ok"

[node name="Cancel" type="Button" parent="InputSelector/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 165.0
margin_right = 219.0
margin_bottom = 32.0
text = "Cancel"

[node name="AddInput" type="PopupPanel" parent="."]
visible = true
margin_left = -304.0
margin_top = 59.0
margin_right = -115.0
margin_bottom = 179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="AddInput"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AddInput/MarginContainer"]
margin_right = 181.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PhysicalKey" type="Button" parent="AddInput/MarginContainer/VBoxContainer"]
margin_right = 181.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 4
text = "Physical Key"
icon = ExtResource( 6 )
align = 0
expand_icon = true

[node name="Key" type="Button" parent="AddInput/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 181.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 4
text = "Key"
icon = ExtResource( 14 )
align = 0
expand_icon = true

[node name="JoyAxis" type="Button" parent="AddInput/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 181.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 4
text = "Joy axis"
icon = ExtResource( 7 )
align = 0
expand_icon = true

[node name="JoyButton" type="Button" parent="AddInput/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 181.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 4
text = "Joy button"
icon = ExtResource( 8 )
align = 0
expand_icon = true

[node name="MouseButton" type="Button" parent="AddInput/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 181.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 4
text = "Mouse button"
icon = ExtResource( 9 )
align = 0
expand_icon = true

[connection signal="about_to_show" from="." to="MarginContainer/VBoxContainer/ActionList/MarginContainer/Tree" method="on_popup"]
[connection signal="add_action" from="MarginContainer/VBoxContainer/AddAction" to="MarginContainer/VBoxContainer/ActionList/MarginContainer/Tree" method="add_action_to_tree"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/AddAction/LineEdit" to="MarginContainer/VBoxContainer/AddAction" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddAction/Add" to="MarginContainer/VBoxContainer/AddAction" method="_on_Add_pressed"]
[connection signal="button_pressed" from="MarginContainer/VBoxContainer/ActionList/MarginContainer/Tree" to="MarginContainer/VBoxContainer/ActionList/MarginContainer/Tree" method="_on_Tree_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ApplyRevert/Apply" to="MarginContainer/VBoxContainer/ApplyRevert" method="_on_Apply_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ApplyRevert/Revert" to="MarginContainer/VBoxContainer/ApplyRevert" method="_on_Revert_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ApplyRevert/Cancel" to="MarginContainer/VBoxContainer/ApplyRevert" method="_on_Cancel_pressed"]
[connection signal="about_to_show" from="InputSelector" to="InputSelector" method="_on_EditInputPopup_about_to_show"]
[connection signal="popup_hide" from="InputSelector" to="InputSelector" method="_on_EditInputPopup_popup_hide"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/JoyButton/Left/Devices" to="InputSelector/MarginContainer/VBoxContainer/JoyButton" method="_on_Devices_item_selected"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/JoyButton/Right/Buttons" to="InputSelector/MarginContainer/VBoxContainer/JoyButton" method="_on_Buttons_item_selected"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Left/Devices" to="InputSelector/MarginContainer/VBoxContainer/JoyAxis" method="_on_Devices_item_selected"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/JoyAxis/Right/Buttons" to="InputSelector/MarginContainer/VBoxContainer/JoyAxis" method="_on_Buttons_item_selected"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/MouseButton/Left/Devices" to="InputSelector/MarginContainer/VBoxContainer/MouseButton" method="_on_Devices_item_selected"]
[connection signal="item_selected" from="InputSelector/MarginContainer/VBoxContainer/MouseButton/Right/Buttons" to="InputSelector/MarginContainer/VBoxContainer/MouseButton" method="_on_Buttons_item_selected"]
[connection signal="pressed" from="InputSelector/MarginContainer/VBoxContainer/HBoxContainer/Ok" to="InputSelector" method="_on_Ok_pressed"]
[connection signal="pressed" from="InputSelector/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="InputSelector" method="_on_Cancel_pressed"]
[connection signal="pressed" from="AddInput/MarginContainer/VBoxContainer/PhysicalKey" to="." method="_on_Physical_Key_pressed"]
[connection signal="pressed" from="AddInput/MarginContainer/VBoxContainer/Key" to="." method="_on_Key_pressed"]
[connection signal="pressed" from="AddInput/MarginContainer/VBoxContainer/JoyAxis" to="." method="_on_JoyAxis_pressed"]
[connection signal="pressed" from="AddInput/MarginContainer/VBoxContainer/JoyButton" to="." method="_on_JoyButton_pressed"]
[connection signal="pressed" from="AddInput/MarginContainer/VBoxContainer/MouseButton" to="." method="_on_MouseButton_pressed"]
